--- a/package.json
+++ b/package.json
@@ -3,18 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^3.9.0",
+    "axios": "^0.27.2",
+    "markdown-it": "^13.0.1",
     "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "prettier": "^2.6.2",
+    "qrcode.react": "^3.0.2",
+    "react": "17.0.2",
+    "react-cropper": "^2.1.7",
+    "react-dom": "17.0.2",
+    "react-markdown-editor-lite": "^1.2.4",
+    "sass": "^1.52.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.38",
+    "@types/react": "^17.0.39",
     "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "express": "^4.18.1",
+    "http-proxy-middleware": "^2.0.6",
+    "typescript": "^4.7.2"
   }
 }
